Fix gaps between sections

--- a/src/css/modules/partners-bar.css
+++ b/src/css/modules/partners-bar.css
@@ -42,3 +42,15 @@
         margin: 0;
     }
 }
+
+
+
+
+
+.partners-bar + .content .container {
+    padding-top: 0;
+}
+
+.partners-bar + .content .container h2 {
+    margin-top: 0;
+}
